Product detail component created, routing and lazy loading added

--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -14,8 +14,12 @@
         type="button"
         class="btn btn-sm btn-outline-secondary fa fa-shopping-cart mr-2"
       ></button>
-      <button type="button" class="btn btn-sm btn-outline-secondary">
-        Edit
+      <button
+        routerLink="/shop/{{ product.id }}"
+        type="button"
+        class="btn btn-sm btn-outline-secondary"
+      >
+        View
       </button>
     </div>
   </div>
